overflow fixed

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1;
+  /* z-index: -1; */
   overflow: hidden;
   background-image: transparent;
 
